--- a/src/app/components/gettype/gettype.component.html
+++ b/src/app/components/gettype/gettype.component.html
@@ -1,6 +1,6 @@
 
 <div class="container" style="margin-left: 270px;">
-    <button type="button" class="btn btn-success" (click)="ongetTypes()">affichage role</button>
+    <button type="button" class="btn btn-success" (click)="ongetTypes()">AFFICHAGE TYPE</button>
 
     <table class="table table-dark">
       <thead>
