--- a/src/app/components/adduser/adduser.component.html
+++ b/src/app/components/adduser/adduser.component.html
@@ -32,6 +32,6 @@
   
           </div>
   
-           <button type="submit" (click)="onAdduser()" class="btn btn-success" style= "width: 300px;"> Enregistrer </button> 
+           <button type="submit" (click)="onAdduser()" class="btn btn-primary btn-block" style= "width: 300px;"> Enregistrer </button> 
      </form>
     
