commit for cheikh

--- a/src/app/components/addenfant/addenfant.component.html
+++ b/src/app/components/addenfant/addenfant.component.html
@@ -1,7 +1,7 @@
 <form action [formGroup]="formaddenfant" style= "margin-left: 270px;background-color:#999999;">
     <h4>AJOUTER DES ENFANTS</h4>
     <div class="form-row">
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
       
         <div class="form-group">
           <label for="">Prenom enfant</label>
@@ -9,7 +9,7 @@
         </div>
   
       </div>
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
       
         <div class="form-group">
           <label for="">Nom enfant</label>
@@ -17,10 +17,18 @@
         </div>
   
       </div>
+      <div class="form-group col-md-4">
+        
+        <div class="form-group">
+          <label for="">Num etat civil</label>
+          <input type="text" formControlName="numetatcivil" class="form-control" placeholder="num etat civil">
+        </div>
+  
+      </div>
     </div>
   
     <div class="form-row">
-        <div class="form-group col-md-6">
+        <div class="form-group col-md-4">
         
           <div class="form-group">
             <label for="">Prenom mere</label>
@@ -28,7 +36,7 @@
           </div>
     
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-md-4">
         
           <div class="form-group">
             <label for="">nom mere</label>
@@ -36,10 +44,7 @@
           </div>
     
         </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group col-md-6">
+        <div class="form-group col-md-4">
         
           <div class="form-group">
             <label for="">ADRESSE</label>
@@ -47,18 +52,11 @@
           </div>
     
         </div>
-        <div class="form-group col-md-6">
-        
-          <div class="form-group">
-            <label for="">Num etat civil</label>
-            <input type="text" formControlName="numetatcivil" class="form-control" placeholder="num etat civil">
-          </div>
-    
-        </div>
       </div>
+
     
       <div class="form-row">
-          <div class="form-group col-md-6">
+          <div class="form-group col-md-4">
           
             <div class="form-group">
               <label for="">Tel mere</label>
@@ -66,7 +64,16 @@
             </div>
       
           </div>
-          <div class="form-group col-md-6">
+          <div class="form-group col-md-4">
+          
+            <div class="form-group">
+              <label for="">Tel pere</label>
+              <input type="number" formControlName="telpere" class="form-control" placeholder="telpere">
+            </div>
+      
+          </div>
+
+          <div class="form-group col-md-4">
           
             <div class="form-group">
               <label for="">DATE NAISSANCE</label>
@@ -74,10 +81,11 @@
             </div>
       
           </div>
-        </div>
+          
+       </div>
 
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-4">
             
               <div class="form-group">
                 <label for="">NOM BADIEN GOKH</label>
@@ -85,7 +93,7 @@
               </div>
         
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-4">
             
               <div class="form-group">
                 <label for="">PRENOM BADIEN GOKH</label>
@@ -93,10 +101,18 @@
               </div>
         
             </div>
+            <div class="form-group col-md-4">
+            
+              <div class="form-group">
+                <label for="">NUMERO VILLA</label>
+                <input type="text" formControlName="numvilla" class="form-control" placeholder="numero villa">
+              </div>
+        
+            </div>
           </div>
         
           <div class="form-row">
-              <div class="form-group col-md-6">
+              <div class="form-group col-md-4">
               
                 <div class="form-group">
                   <label for="">MOTIF SORTIE</label>
@@ -104,7 +120,7 @@
                 </div>
           
               </div>
-              <div class="form-group col-md-6">
+              <div class="form-group col-md-4">
               
                 <div class="form-group">
                   <label for="">ETAT SORTIE</label>
@@ -112,10 +128,7 @@
                 </div>
           
               </div>
-            </div>
-      
-            <div class="form-row">
-              <div class="form-group col-md-6">
+              <div class="form-group col-md-4">
               
                 <div class="form-group">
                   <label for="">ETAT ENTRE</label>
@@ -123,18 +136,11 @@
                 </div>
           
               </div>
-              <div class="form-group col-md-6">
-              
-                <div class="form-group">
-                  <label for="">TEL BADIEN GOKH</label>
-                  <input type="number" formControlName="telbadiennegokh" class="form-control" placeholder="num etat civil">
-                </div>
-          
-              </div>
             </div>
+      
           
             <div class="form-row">
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
                 
                   <div class="form-group">
                     <label for="">Tel CHEF QUARTIER</label>
@@ -142,11 +148,19 @@
                   </div>
             
                 </div>
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
                 
                   <div class="form-group">
                     <label for="">NOM CHEF QUARTIER</label>
                     <input type="text" formControlName="nomchefquartier" class="form-control" placeholder="date naissance">
+                  </div>
+            
+                </div>
+                <div class="form-group col-md-4">
+              
+                  <div class="form-group">
+                    <label for="">TEL BADIEN GOKH</label>
+                    <input type="number" formControlName="telbadiennegokh" class="form-control" placeholder="num etat civil">
                   </div>
             
                 </div>
