--- a/src/app/components/edit-rendezvous/edit-rendezvous.component.html
+++ b/src/app/components/edit-rendezvous/edit-rendezvous.component.html
@@ -103,7 +103,7 @@
         <div class="form-group col">
             <label for="text">POIDS TAILLE</label>
             <select input type="text" formControlName="poidstaille" class="form-control" value={{poidstaille}} id="poidstaille">
-                <option   value="pma">PMA</option>
+                <option   value="ben">BEN</option>
                 <option   value="mcs">MAS</option>
                 <option   value="mcm">MAM</option>
                  <option   value="surpoidobesite">SURPOIDSOBESITE</option>
