--- a/src/app/components/homecomp/homecomp.component.html
+++ b/src/app/components/homecomp/homecomp.component.html
@@ -210,38 +210,22 @@
       <hr>
       <div class="row">
         <div class="form-group col-md-6">
-       
-          <a href="/login" target="_blank" class="btn btn-primary btn-sm">SE CONNECTER</a>, 
           <ul>
             <li>
-              <a href="/getaction" target="_blank" class="btn btn-success btn-sm" >LISTE ACTION</a>
-            </li>
-            <li>
-              <a href="/addrv" target="_blank" class="btn btn-primary btn-sm">PLANIFIER RV</a>
+              <a href="/home" target="_blank" class="btn btn-primary btn-sm">HOME</a>
             </li>
           </ul>  
         </div>
 
         <div class="form-group col-md-6">
        
-          <a target="_blank" (click)="onlogout()" class="btn btn-primary btn-sm">DECONNECTER</a>, 
-          <ul>
-            <li>
-              
-              <a href="/addenfant" target="_blank" class="btn btn-success btn-sm">AJOUT ENFANT</a>
-            </li>
-            <li>
-             
-              <a href="/getenfant" target="_blank" class="btn btn-primary btn-sm" >LISTE ENFANT</a>
-            </li>
-            
-          </ul>  
+          <a target="_blank" (click)="onlogout()" class="btn btn-primary btn-sm">DECONNECTER</a>
         </div>
        
         <div class="form-group col-md-2">
           <div class="alert alert-success" role="alert">
     
-              <a href="/putenfant" target="_blank" class="btn btn-success btn-sm" >MODIFIER ENFANT</a>
+            <a href="/getenfant" target="_blank" class="btn btn-success btn-sm" >LISTE ENFANT</a> 
 
           </div>
         </div>
@@ -263,14 +247,14 @@
         <div class="form-group col-md-2">
           <div class="alert alert-success" role="alert">
     
-              <a href="/getenfant" target="_blank" class="btn btn-success btn-sm" >LISTE ENFANT </a>
+              <a href="/addenfant" target="_blank" class="btn btn-success btn-sm" >AJOUT ENFANT </a>
 
           </div>
         </div>
         <div class="form-group col-md-2">
           <div class="alert alert-success" role="alert">
     
-              <a href="/adduser" target="_blank" class="btn btn-success btn-sm" >AJOUTER USER</a>
+              <a href="/getaction" target="_blank" class="btn btn-success btn-sm" >LISTE ACTION</a>
 
           </div>
         </div>
@@ -287,7 +271,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
           <div class="card rounded-0 p-0 shadow-sm">
-            <img src="https://media.istockphoto.com/photos/full-body-shot-of-a-happy-african-black-child-getting-a-needle-as-a-picture-id842147876" class="card-img-top rounded-0" alt="Angular pro sidebar">
+            <img style="height: 250px;" src="https://media.istockphoto.com/photos/full-body-shot-of-a-happy-african-black-child-getting-a-needle-as-a-picture-id842147876" class="card-img-top rounded-0" alt="Angular pro sidebar">
             <div class="card-body text-center">
               <h6 class="card-title"></h6>
               <a href="/addrv" target="_blank" class="btn btn-primary btn-sm">AJOUT RV</a>
@@ -298,7 +282,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
           <div class="card rounded-0 p-0 shadow-sm">
-            <img src="https://www.gavi.org/sites/default/files/background-image/2019/RS20189_Sam-Reinders_sq.jpg" class="card-img-top rounded-0" alt="Angular pro sidebar">
+            <img style="height: 250px;" src="https://www.gavi.org/sites/default/files/background-image/2019/RS20189_Sam-Reinders_sq.jpg" class="card-img-top rounded-0" alt="Angular pro sidebar">
             <div class="card-body text-center">
               <h6 class="card-title"></h6>
               <a href="/addenfant" target="_blank" class="btn btn-primary btn-sm" > AJOUTENFANT </a>
@@ -308,11 +292,11 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
           <div class="card rounded-0 p-0 shadow-sm">
-            <img src="https://img.aws.la-croix.com/2019/03/21/1201010414/permettre-evaluation-reguliere-connaissances-medecinsaussi-chirurgiens-dentistes-sages-femmes-pharmaciens-infirmiers-masseurs-kinesitherapeutes-pedicures-podologues_0_728_484.jpg" class="card-img-top rounded-0" alt="Angular pro sidebar">
+            <img style="height: 250px;" src="https://img.aws.la-croix.com/2019/03/21/1201010414/permettre-evaluation-reguliere-connaissances-medecinsaussi-chirurgiens-dentistes-sages-femmes-pharmaciens-infirmiers-masseurs-kinesitherapeutes-pedicures-podologues_0_728_484.jpg" class="card-img-top rounded-0" alt="Angular pro sidebar">
             <div class="card-body text-center">
               <h6 class="card-title"></h6>
-              <a href="/addaction" target="_blank" class="btn btn-primary btn-sm"  > AJOUT ACTION</a>
-              <a href="/getrv" target="_blank" class="btn btn-success btn-sm" > LISTE RV </a>
+              <a href="/addaction" target="_blank" class="btn btn-primary btn-sm"  >AJOUT ACTION</a>
+              <a href="/getaction" target="_blank" class="btn btn-success btn-sm" >LISTE RV </a>
             </div>
           </div>
         </div>
