--- a/src/app/components/listrv/listrv.component.html
+++ b/src/app/components/listrv/listrv.component.html
@@ -40,7 +40,7 @@
 
             <td>{{rv.id}}</td>
             <td>
-              <a href="/putrv" target="_blank" class="btn btn-success btn-sm" >EFECTUER RV</a>
+              <a href="/putrv" target="_blank" (click)="editRendezvous(rv)" class="btn btn-success btn-sm" >EFECTUER RV</a>
             </td>
 
             <td>
