--- a/src/app/components/addaction/addaction.component.html
+++ b/src/app/components/addaction/addaction.component.html
@@ -1,24 +1,33 @@
-<form action [formGroup]="formaddaction" style= "margin-left: 270px;background-color:#999999;">
-    <h4>AJOUTER DES ACTIONS</h4>
-   
-    <div class="search" style="margin-left: 500px;">
-    </div>
-      
 
-    <div class="form-group">
+     <div class="col-md-9 offset-md-3 mt-5">
+      <div class="card">
+        <h4 class="card-header text-center">AJOUTER DES ACTIONS</h4>
+        <div class="card-body">
+    
+          <form action [formGroup]="formaddaction" >
+            
+              <div class="row mb-3">
+                  <div class="col">
+                    <label for="">TYPE</label>
 
-      <label for="">TYPE</label>
-
-      <select type="text" class="form-control" formControlName="type">
-        <option *ngFor="let type of types" value="/api/types/{{ type.id }}"> {{ type.libelletype }} </option>
-      </select>
-
-      </div>
-
-
-        <div class="form-group">
-          <label for="">NOM TYPE</label>
-          <input type="text" formControlName="libelleaction" class="form-control" placeholder="nom du type">
+                    <select type="text" class="form-control" formControlName="type">
+                      <option *ngFor="let type of types" value="/api/types/{{ type.id }}"> {{ type.libelletype }} </option>
+                    </select>
+                  </div>
+    
+                  <div class="form-group col">
+                    <label for="">NOM TYPE</label>
+                    <input type="text" formControlName="libelleaction" class="form-control" placeholder="nom du type">
+                  </div>
+                
+              </div>
+    
+          
+              <button type="submit" (click)="onAdduser()" class="btn btn-primary btn-block" style= "width: 300px;"> Enregistrer </button> 
+    
+          </form>
         </div>
-           <button type="submit" (click)="onAdduser()" class="btn btn-primary btn-block" style= "width: 300px;"> Enregistrer </button> 
-     </form>
+      </div>
+    </div>
+    
+    
