filter rv succcess

--- a/src/app/components/getenfant/getenfant.component.html
+++ b/src/app/components/getenfant/getenfant.component.html
@@ -3,7 +3,7 @@
     <input class="form-control" type="text" placeholder="rechercher ici..." name="search"  [(ngModel)]="rechercheUser" style="margin-left:500px ;"> 
   </div>
 <button type="button" class="btn btn-success" (click)="ongetListeenfants()">affichage LISTE ENFANTS</button>
-
+    <p>le nbre d'enfants est {{ nbreenfants }}</p>
     <table class="table table-dark">
       <thead>
         <tr>
